--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "",
+    "name": "MK",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png?v=2",
+            "src": "/android-chrome-192x192.png?v=3",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-384x384.png?v=2",
+            "src": "/android-chrome-384x384.png?v=3",
             "sizes": "384x384",
             "type": "image/png"
         }
